[package]
name = "axum-jwt"
version = "0.1.0"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6", features = ["headers"] }
axum-macros = "0.2.3"
jsonwebtoken = "8.1.1"
jsonwebkey = {version =  "0.3.5", features = ["jsonwebtoken", "jwt-convert", "generate"]}
openidconnect = "2.3"
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.90"
tokio = { version = "1.0", features = ["full"] }
thiserror = "1.0"
